# jiggon

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  jiggon_config.json  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
app/: config.py  main.py
app/ai/: __init__.py  predictor.py
app/analysis/: __init__.py  indicators.py  market.py
app/backtesting/: __init__.py  comparison.py  io.py  replay.py  reporting.py  sweep.py  walk_forward.py
app/broker/: __init__.py  client.py
app/data/: deriv_ws.py
app/database/: __init__.py  session.py
app/execution/: __init__.py  engine.py
app/monitoring/: __init__.py  health.py
app/risk/: engine.py  mood.py
app/sessions/: __init__.py  engine.py
app/strategy/: adaptive.py  confidence.py  mtf.py  performance.py  (+1 more)
config/: logging.ini
data/: BTC-USD_1h.csv
docs/: strategy_audit.md
scripts/: check_telegram_bot.py  compare_strategies.py  fetch_yahoo_ohlc.py  parameter_sweep.py  run_dev.ps1  run_walk_forward_report.py
strategies/: README.md  contrarian_bear.jiggon  contrarian_bull.jiggon  high_vol_scalper.jiggon  mean_reversion.jiggon  momentum_scalper.jiggon  my_strategy.jiggon  safe_harbor.jiggon  trend_rider.jiggon  whipsaw_catcher.jiggon
tests/: README.md  test_adaptive.py  test_backtesting_io_reporting.py  test_backtesting_replay.py  test_confidence.py  test_mood.py  test_parameter_sweep.py  test_performance.py  test_risk.py  test_sessions.py  test_strategy_adaptive.py  test_strategy_comparison.py  test_strategy_signals.py  test_walk_forward.py
website/: fly.toml  index.html
(+47 files in other folders)
