[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jiggon"
version = "0.1.3"
description = "An open-source CLI trading bot engineered for algorithmic execution on the Deriv API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic-settings>=2.7.1",
    "SQLAlchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "pandas>=2.2.3",
    "numpy>=2.2.1",
    "scipy>=1.15.0",
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.3",
    "httpx>=0.28.1",
    "rich>=13.7.0",
    "textual>=0.86.2",
    "plotext>=5.2.8",
    "textual-plotext>=1.0.1",
    "websockets>=12.0",
    "pandas-ta>=0.4.71b0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0"
]

[project.scripts]
jiggon = "jiggon.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py312"
